correct path to setup

--- a/.github/actions/publish/action.yml
+++ b/.github/actions/publish/action.yml
@@ -3,6 +3,6 @@ description: "Publishes as configured in package.json"
 runs:
   using: composite
   steps:
-    - uses: actions/setup
+    - uses: ./.github/actions/setup
     - run: npm run ci:publish
       shell: sh
