--- a/.github/actions/lint/action.yml
+++ b/.github/actions/lint/action.yml
@@ -3,6 +3,6 @@ description: "Lints as configured in package.json"
 runs:
   using: composite
   steps:
-    - uses: actions/setup
+    - uses: ./.github/actions/setup
     - run: npm run ci:lint
       shell: sh
