--- a/.github/actions/setup/action.yml
+++ b/.github/actions/setup/action.yml
@@ -7,7 +7,7 @@ runs:
       with:
         version: 3.10.0
     - name: helm login
-      run: helm registry login --username ghcr.io/hypnopotamus/skillsmatrix ${{ github.repository_owner }} --password $GITHUB_TOKEN
+      run: helm registry login ghcr.io/hypnopotamus/skillsmatrix --username ${{ github.repository_owner }} --password $GITHUB_TOKEN
       shell: sh
     - uses: actions/setup-node@v3
       with:
