--- a/.github/actions/setup/action.yml
+++ b/.github/actions/setup/action.yml
@@ -14,7 +14,5 @@ runs:
         node-version: 18
     - run: npm install
       shell: sh
-    - run: npm pkg set config.container.registry=ghcr.io/hypnopotamus/skillsmatrix config.container.npm.registry=https://github.com/hypnopotamus/skillsmatrix config.chart.repository=ghcr.io/hypnopotamus/skillsmatrix
-      shell: sh
-    - run: npm config set registry=https://registry.npmjs.org @skillsmatrix:registry=https://github.com/hypnopotamus/skillsmatrix //github.com/hypnopotamus/skillsmatrix/:_authToken $GITHUB_TOKEN --location project
+    - run: npm pkg set config.container.registry=ghcr.io/hypnopotamus/skillsmatrix config.chart.repository=ghcr.io/hypnopotamus/skillsmatrix
       shell: sh
