--- a/UI/ContentServer/package.json
+++ b/UI/ContentServer/package.json
@@ -6,10 +6,7 @@
   "scripts": {
     "build": "tsc",
     "test": "jest",
-    "lint": "npx tsc --noEmit",
-    "ci:build": "npm run container:build",
-    "ci:lint": "concurrently --names \"typescript,helm\" \"npm run lint\" \"helm lint chart\"",
-    "ci:publish": "concurrently --names \"container,chart,package\" \"npm run container:publish\" \"npm run chart:publish\" \"npm publish\""
+    "lint": "npx tsc --noEmit"
   },
   "repository": {
     "type": "git",
