--- a/buildScripts/package.json
+++ b/buildScripts/package.json
@@ -1,7 +1,6 @@
 {
   "name": "@skillsmatrix/buildscripts",
   "version": "1.0.1",
-  "description": "",
   "bin": {
     "installChart": "dist/installChart.js",
     "publishChart": "dist/publishChart.js",
@@ -11,17 +10,19 @@
   "scripts": {
     "build": "tsc",
     "test": "echo TODO needs tests",
-    "ci:build": "npm run build",
-    "ci:lint": "npx tsc --noEmit",
-    "ci:publish": "npm publish"
+    "lint": "npx tsc --noEmit"
   },
   "license": "ISC",
   "repository": {
     "type": "git",
-    "url": "https://github.com/hypnopotamus/SkillsMatrix"
+    "url": "git+https://github.com/hypnopotamus/SkillsMatrix.git"
   },
   "devDependencies": {
     "@types/node": "^18.11.9",
     "typescript": "^4.9.3"
-  }
+  },
+  "bugs": {
+    "url": "https://github.com/hypnopotamus/SkillsMatrix/issues"
+  },
+  "homepage": "https://github.com/hypnopotamus/SkillsMatrix#readme"
 }
