--- a/infrastructure/local/package.json
+++ b/infrastructure/local/package.json
@@ -10,6 +10,10 @@
   "license": "ISC",
   "repository": {
     "type": "git",
-    "url": "https://github.com/hypnopotamus/SkillsMatrix"
-  }
+    "url": "git+https://github.com/hypnopotamus/SkillsMatrix.git"
+  },
+  "bugs": {
+    "url": "https://github.com/hypnopotamus/SkillsMatrix/issues"
+  },
+  "homepage": "https://github.com/hypnopotamus/SkillsMatrix#readme"
 }
