--- a/package.json
+++ b/package.json
@@ -3,19 +3,24 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@skillsmatrix/buildscripts": "file:buildScripts",
-    "concurrently": "^7.4.0",
-    "localbuildinfrastructure": "file:infrastructure/local",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.4"
   },
   "scripts": {
-    "postinstall": "npm run start:infrastructure && ts-node scripts/installAndPackage.ts",
-    "start:infrastructure": "cd node_modules/localbuildinfrastructure && npm run start:build-tools",
-    "start:cluster": "cd node_modules/localbuildinfrastructure && npm run start:cluster",
+    "postinstall": "npm run start:infrastructure",
+    "start:infrastructure": "npm run start:build-tools --workspace=localbuildinfrastructure",
+    "start:cluster": "npm run start:cluster --workspace=localbuildinfrastructure",
     "prestart": "npm run start:cluster",
-    "start": "concurrently --names \"comparison,container,api\" \"cd UI/Comparison && npm start\" \"cd UI && npm start\" \"cd api && npm start\"",
-    "build": "concurrently --names \"comparison,container,api\" \"cd UI/Comparison && npm run build\" \"cd UI && npm run build\" \"cd api && npm run build\"",
-    "test": "concurrently --names \"comparison,container,api\" \"cd UI/Comparison && npm test\" \"cd UI && npm test\" \"cd api && npm test\""
-  }
+    "prebuild": "npm run build --workspace=buildScripts",
+    "start": "npm start --workspaces --if-present",
+    "build": "npm run build --workspaces --if-present",
+    "test": "npm test --workspaces --if-present"
+  },
+  "workspaces": [
+    "infrastructure/local",
+    "api",
+    "UI",
+    "UI/Comparison",
+    "buildScripts"
+  ]
 }
